--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+      <title>Home page</title>
+      <meta charset="UTF-8">
+    </head>
+
     <body>
-        <p>Hello, World!</p>
+      <h1>WHO</h1>
+        <h3>I am Garret. My pronouns are he/his.
+        My goals for this course are building a
+        good foundation of web knowledge for future
+        projects. I enjoy a lot of digital mediums
+        such as photography, cinematography, coding
+        and more.</h3>
+
+        <h2><a href="https://youtu.be/iU6ZGXIDmIk">
+          IMPORTANT LINK</a></h2>
+
+          <p></p>
+
+        <img src="img/GB_1st.jpg" alt="ME">
     </body>
 </html>
