Added assignment3.html, Updated index.html to direct to previous assignments

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
           <p></p>
 
         <img src="img/GB_1st.jpg" alt="ME">
+
+        <h2>Contents</h2>
+        <ul>
+          <li><a href="assignment1.html">Assignment 1</a></li>
+          <li><a href="assignment3.html">Assignment 3</a></li>
+        </ul>
     </body>
 </html>
