--- a/assignment3.html
+++ b/assignment3.html
@@ -2,26 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Brioche Bread</title>
+    <title>Garlic Bread</title>
   </head>
   <body>
-    <h1>Brioche Bread</h1>
+    <h1>Garlic Bread</h1>
     <h2>Contents</h2>
     <ol>
-      <li><a href="#forms">Forms</a></li>
-      <li><a href="#history">histroy</a></li>
-      <li><a href="#etymology">Etymology</a></li>
-      <li><a href="#types">Types</a></li>
-      <li><a href="#relatedBreads">Related Breads</a></li>
+      <li><a href="#history">History</a></li>
+      <li><a href="#europe">Europe</a></li>
+      <li><a href="#northAmerica">North America</a></li>
       <li><a href="#seeAlso">See Also</a></li>
       <li><a href="#source">Source</a></li>
     </ol>
 
-    <h2 id="forms">Forms</h2>
     <h2 id="history">History</h2>
-    <h2 id="etymology">Etymology</h2>
-    <h2 id="types">Types</h2>
-    <h2 id="relatedBreads">Related Breads</h2>
+    <h2 id="europe">Europe</h2>
+    <h2 id="northAmerica">North America</h2>
     <h2 id="seeAlso">See Also</h2>
     <h2 id="source">Source</h2>
   </body>
