--- a/assignment3.html
+++ b/assignment3.html
@@ -10,15 +10,31 @@
     <ol>
       <li><a href="#history">History</a></li>
       <li><a href="#europe">Europe</a></li>
-      <li><a href="#northAmerica">North America</a></li>
       <li><a href="#seeAlso">See Also</a></li>
       <li><a href="#source">Source</a></li>
     </ol>
 
     <h2 id="history">History</h2>
+      <p>Garlic bread stems from <a href="https://en.wikipedia.org/wiki/Bruschetta">bruschetta</a>,
+        which appeared in Italy around the 15th century, and can be traced back to
+        <a href="https://en.wikipedia.org/wiki/Ancient_Rome">Ancient Rome</a>.
+      </p>
     <h2 id="europe">Europe</h2>
-    <h2 id="northAmerica">North America</h2>
+      <p>Garlic bread is widely popular across Europe, and is
+        available in many different food shops and restaurants.
+      </p>
+      <ul>
+        <li>In German-speaking countries, it is known as Knoblauchbrot.</li>
+        <li>In Greece, garlic bread often contains olives and onions.</li>
+        <li>In France, it was common in Provence, where it was called
+          <a href="https://fr.wiktionary.org/wiki/chapon#Nom_commun"><em>chapon</em></a>
+           and served with salad. It was also prepared in other regions, such as
+           <a href="https://en.wikipedia.org/wiki/Quercy">Quercy</a>, as a crust of bread
+           rubbed with garlic, and spiced with a pinch of salt and a drop of walnut oil.</li>
+        <li>In England, butter is used instead of olive oil in garlic bread.</li>
+      </ul>
     <h2 id="seeAlso">See Also</h2>
     <h2 id="source">Source</h2>
+      <p><a href="https://en.wikipedia.org/wiki/Garlic_bread">https://en.wikipedia.org/wiki/Garlic_bread</a>
   </body>
 </html>
