--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
         <h2>Contents</h2>
         <ul>
-          <li><a href="assignment1.html">Assignment 1</a></li>
-          <li><a href="assignment3.html">Assignment 3</a></li>
+          <li><a href="assignment1.html">Assignment 1 (Hello World)</a></li>
+          <li><a href="index.html">Assignment 2 (Current Page)</a></li>
+          <li><a href="assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
         </ul>
     </body>
 </html>
