--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li><a href="assignment1.html">Assignment 1 (Hello World)</a></li>
           <li><a href="index.html">Assignment 2 (Current Page)</a></li>
           <li><a href="assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
+          <li><a href="assignment4.html">Assignment 4 (HTML Challenges)</a></li>
         </ul>
     </body>
 </html>
