--- a/assignment4.html
+++ b/assignment4.html
@@ -12,118 +12,159 @@
         <li><a href="#chessboard">Chessboard</a></li>
         <li><a href="#form">form</a></li>
         <li><a href="#googlePage">Google Page</a></li>
-        <li><a href="#accessibilityStatement">See Also</a></li>
+        <li><a href="#accessibilityStatement">Accessibility Statement</a></li>
       </ol>
     </div>
     <div>
       <h2 id="chessboard">Challenge 2: Chessboard</h2>
-      <p>WIP</p>
-      <style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 10px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 10px;word-break:normal;}
-.tg .tg-1ono{background-color:#343434;border-color:inherit;text-align:left;vertical-align:top}
-.tg .tg-c6of{background-color:#ffffff;border-color:inherit;text-align:left;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-.tg .tg-w9in{background-color:#343434;text-align:left;vertical-align:top}
-.tg .tg-0lax{text-align:left;vertical-align:top}
-</style>
-<table class="tg">
+      <table style="border:5px solid black">
   <tr>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-0pky"></th>
-    <th class="tg-w9in"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-w9in"></th>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265C;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265E;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265D;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265B;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265A;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265D;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265E;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265C;</p></td>
   </tr>
   <tr>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-w9in"></td>
-    <td class="tg-0lax"></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x265F;</p></td>
   </tr>
   <tr>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-0pky"></th>
-    <th class="tg-w9in"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-w9in"></th>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
   </tr>
   <tr>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-w9in"></td>
-    <td class="tg-0lax"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
   </tr>
   <tr>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-0pky"></th>
-    <th class="tg-w9in"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-w9in"></th>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
   </tr>
   <tr>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-w9in"></td>
-    <td class="tg-0lax"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
+    <td style="background-color:grey;height:50px;width:50px"></td>
+    <td style="background-color:white;height:50px;width:50px"></td>
   </tr>
   <tr>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-c6of"></th>
-    <th class="tg-1ono"></th>
-    <th class="tg-0pky"></th>
-    <th class="tg-w9in"></th>
-    <th class="tg-0lax"></th>
-    <th class="tg-w9in"></th>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2659;</p></td>
   </tr>
   <tr>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-1ono"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-w9in"></td>
-    <td class="tg-0lax"></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2656;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2658;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2657;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2655;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2654;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2657;</p></td>
+    <td style="background-color:grey;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2658;</p></td>
+    <td style="background-color:white;height:50px;width:50px"><p style="font-size:15px;text-align:center;">&#x2656;</p></td>
   </tr>
 </table>
     </div>
     <div>
       <h2 id="form">Challenge 3: Create a Form</h2>
-      <p>WIP</p>
+      <p>NAME:</p>
+      <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+      </form>
+      <p>FAVORITE SCOOTER:</p>
+      <form>
+        <input type="radio" id="razor" name="scooter">
+        <label for="razor">Razor</label><br>
+        <input type="radio" id="micro" name="scooter">
+        <label for="micro">Micro</label><br>
+        <input type="radio" id="lascoota" name="scooter">
+        <label for="lascoota">LaScoota</label><br>
+      </form>
+      <p>SANDWICH:</p>
+      <form>
+        <input type="checkbox" id="bread" name="sandwich1">
+        <label for="bread">Bread</label><br>
+        <input type="checkbox" id="peanutbutter" name="sandwich2">
+        <label for="peanutbutter">Peanut Butter</label><br>
+        <input type="checkbox" id="jelly" name="sandwich3">
+        <label for="jelly">Jelly</label><br>
+        <input type="checkbox" id="ham" name="sandwich4">
+        <label for="ham">Ham</label><br>
+        <input type="checkbox" id="cheese" name="sandwich5">
+        <label for="cheese">Cheese</label><br>
+      </form>
     </div>
     <div>
       <h2 id="googlePage">Challenge 4: A Google Search Page</h2>
-      <p>WIP</p>
+      <h4>About 1,790,000,000 results (0.58 seconds) </h4>
+      <br>
+      <h3>https://www.colorado.edu › atlas</h3>
+      <h1><a href="https://www.colorado.edu/atlas/">ATLAS Institute | University of Colorado Boulder</a></h1>
+      <h3>ATLAS is an interdisciplinary institute for radical creativity and invention. We transform ingenious ideas into reality through research, ...</h3>
+      <ul>
+        <li><a href="https://www.colorado.edu/atlas/academics/grad"><h2>Graduate Degrees in Creative ...</h2></a><br>Radically interdisciplinary, ATLAS graduate programs nurture ...</li>
+        <li><a href="https://www.colorado.edu/atlas/faculty"><h2>Faculty</h2></a><br>Lecturer, co-chair Board of Advisors • DESIGN, AR/VR ...</li>
+        <li><a href="https://www.colorado.edu/atlas/academics"><h2>Academics</h2></a><br>Granted through the College of Engineering and Applied ...</li>
+        <li><a href="https://www.colorado.edu/atlas/about-atlas"><h2>About</h2></a><br>ATLAS is an interdisciplinary institute for radical creativity and ...</li>
+        <li><a href="https://www.google.com/search?q=atlas+institute+site:colorado.edu&rlz=1C1CHBF_enUS860US860&sxsrf=APq-WBt9wBgCC7rdMapW1Mp0GKSayOm1pw:1644261881222&sa=X&ved=2ahUKEwjx4uPqqO71AhX2HzQIHd7sD58QrAN6BAgdEAE&biw=1278&bih=1315&dpr=1">More results from colorado.edu »</a></li>
+      </ul>
+      <br>
+      <h3>https://twitter.com/cuatlas</h3>
+      <h1><a href="https://twitter.com/cuatlas?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">CU ATLAS (@cuatlas) · Twitter</a></h1>
+      <h3>Shout out to our wacky game designers selected for 2022 atl.ctrl.GDC. W/ only 15 slots in the #GDC22 showcase, we’re so excited that 4 were picked from the #ATLAS community. See & play them all at the showcase in San Fran, Mar 21-25. 👾🎮🎲 pic.twitter.com/vr2458H…</h3>
+      <h4><a href="https://twitter.com/cuatlas/status/1489743303272804361?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Etweet">Twitter</a> · 3 days ago</h4>
+      <br>
+      <h3>https://www.colorado.edu › innovate › atlas-institute</h3>
+      <h1><a href="https://www.colorado.edu/innovate/atlas-institute">ATLAS Institute | Innovation & Entrepreneurship - University of ...</a></h1>
+      <h3>Resource that sponsors diverse interdisciplinary academic and research programs, challenging community members to explore, innovate, create and design well ...</h3>
+      <br>
+      <h3>https://www.linkedin.com › school › atlas-cu-boulder</h3>
+      <h1><a href="https://www.linkedin.com/school/atlas-cu-boulder/">ATLAS Institute at CU Boulder Employees, Location, Alumni</a></h1>
+      <h3>ATLAS is an interdisciplinary institute for radical creativity and invention where ingenious ideas become reality. · ATLAS Institute at CU Boulder. View all open ...</h3>
     </div>
     <div>
       <h2 id="accessibilityStatement">Challenge 5: Accessibility Concerns</h2>
-      <p>WIP</p>
+      <p>Doing this assignment I learned of the many accessibility challenges with creating a website. Using something like a table in a website presents a serious accessibility concern as a screen reader cannot read a table clearly to a user.
+      I did read about how the different form inputs allow for a higher degree of acccessibility though which I was glad to hear about. Using the lable tag allows people to click on the lable to interact with the form.
+      As for the problems using a table in a website, I don't know exactly how a screen reader works, but if the structure of the table is what causes the problem then replacing the table with an alternative seems to be the only option.</p>
     </div>
   </body>
 </html>
