Updated everything with a way to get back to the main page, added Week5 folder and Week5/index.html

--- a/assignment4.html
+++ b/assignment4.html
@@ -5,6 +5,7 @@
     <title>Assignment 4</title>
   </head>
   <body>
+    <a href="index.html">Home</a>
     <h1>Assignment 4</h1>
     <div>
       <h2>Table of Contents</h2>
