--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         such as photography, cinematography, coding
         and more.</h3>
 
-        <h2><a href="https://youtu.be/iU6ZGXIDmIk">
-          IMPORTANT LINK</a></h2>
+        <h2><a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a></h2>
 
-          <p></p>
+          <br>
 
         <img src="img/GB_1st.jpg" alt="ME">
 
         <h2>Contents</h2>
         <ul>
+          <li><a href="Week5/index.html">Cheat Sheet</a></li>
           <li><a href="assignment1.html">Assignment 1 (Hello World)</a></li>
           <li><a href="index.html">Assignment 2 (Current Page)</a></li>
           <li><a href="assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
