--- a/assignment1.html
+++ b/assignment1.html
@@ -1,6 +1,7 @@
 <html>
     <head></head>
     <body>
-        <p>Hello, World!</p>
+      <a href="index.html">Home</a>
+      <p>Hello, World!</p>
     </body>
 </html>
