--- a/assignment3.html
+++ b/assignment3.html
@@ -5,6 +5,7 @@
     <title>Garlic Bread</title>
   </head>
   <body>
+    <a href="index.html">Home</a>
     <h1>Garlic Bread</h1>
     <img width=300 height=200 src="img/garlicBreadImg.jpg" alt="Garlic Bread">
     <p><b>Garlic bread</b> (also called <b>garlic toast</b>) consists of bread
