Added styles.css, updated index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Home page</title>
       <meta charset="UTF-8">
+      <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -13,13 +14,7 @@
         projects. I enjoy a lot of digital mediums
         such as photography, cinematography, coding
         and more.</h3>
-
-        <h2><a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a></h2>
-
-          <br>
-
-        <img src="img/GB_1st.jpg" alt="ME">
-
+        
         <h2>Contents</h2>
         <ul>
           <li><a href="Week5/index.html">Cheat Sheet</a></li>
@@ -28,5 +23,14 @@
           <li><a href="assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
           <li><a href="assignment4.html">Assignment 4 (HTML Challenges)</a></li>
         </ul>
+
+        <h2><a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a></h2>
+
+          <br>
+
+        <img src="img/GB_1st.jpg" alt="ME">
+
+        <p>This is a test paragraph that I'm using to test certain code for the website.</p>
+
     </body>
 </html>
