Updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         projects. I enjoy a lot of digital mediums
         such as photography, cinematography, coding
         and more.</h3>
-        
+
         <h2>Contents</h2>
         <ul>
           <li><a href="Week5/index.html">Cheat Sheet</a></li>
@@ -25,6 +25,8 @@
         </ul>
 
         <h2><a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a></h2>
+
+        <h2><a href="https://www.google.com">Test Link</a></h2>
 
           <br>
 
