Updated a lot, changed file structure

--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Garlic Bread</title>
+    <title>Assignment 3</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h1>Garlic Bread</h1>
-    <img width=300 height=200 src="img/garlicBreadImg.jpg" alt="Garlic Bread">
+    <img width=300 height=200 src="../img/garlicBreadImg.jpg" alt="Garlic Bread">
     <p><b>Garlic bread</b> (also called <b>garlic toast</b>) consists of bread
       (usually a baguette or sour dough like a <a href="https://en.wikipedia.org/wiki/Ciabatta">ciabatta</a>),
       topped with <a href="https://en.wikipedia.org/wiki/Garlic">garlic</a> and
