--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title>Home page</title>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
@@ -17,11 +17,10 @@
 
         <h2>Contents</h2>
         <ul>
-          <li><a href="Week5/index.html">Cheat Sheet</a></li>
-          <li><a href="assignment1.html">Assignment 1 (Hello World)</a></li>
+          <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
           <li><a href="index.html">Assignment 2 (Current Page)</a></li>
-          <li><a href="assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
-          <li><a href="assignment4.html">Assignment 4 (HTML Challenges)</a></li>
+          <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
+          <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
         </ul>
 
         <hr>
