--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>Home page</title>
-      <meta charset="UTF-8">
+      <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="../css/styles.css">
     </head>
 
