--- a/page1.html
+++ b/page1.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test 1</title>
   </head>
   <body>
+    <div class="title">
+      <p>This is a placeholder title.</p>
+    </div>
+    <div class="nav">
+      <p>This is placeholder navigation.</p>
+    </div>
+    <div class="content">
+      <p>This is placeholder content.</p>
+    </div>
 
   </body>
 </html>
