Removed un-needed files and added more stuff

--- a/page1.html
+++ b/page1.html
@@ -2,18 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/test.css">
     <title>Test 1</title>
   </head>
   <body>
+    <div class="box">
+
     <div class="title">
       <p>This is a placeholder title.</p>
+      <p>This is a placeholder title.</p>
+      <p>This is a placeholder title.</p>
+      <p>This is a placeholder title.</p>
+
     </div>
     <div class="nav">
       <p>This is placeholder navigation.</p>
+      <p>This is placeholder navigation.</p>
+      <p>This is placeholder navigation.</p>
+      <p>This is placeholder navigation.</p>
+
     </div>
     <div class="content">
+      <img src="img/garlicBreadImg.jpg">
       <p>This is placeholder content.</p>
-    </div>
+      <p>This is placeholder content.</p>
+      <p>This is placeholder content.</p>
+      <p>This is placeholder content.</p>
 
+    </div>
+    </div>
   </body>
 </html>
