--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="index.html">Assignment 2 (Current Page)</a></li>
           <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
           <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
+          <li><a href="page1.html">Test page</a></li>
         </ul>
 
         <hr>
