--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
-<html>
-    <head>
-      <title>Home page</title>
-      <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="../css/styles.css">
-    </head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/master.css">
+    <title>Test 1</title>
+  </head>
+  <body>
+    <div class="box">
 
-    <body>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page2.html">Assignments</a></li>
+        <li><a href="page3.html">Projects</a></li>
+        <li><a href="page4.html">About</a></li>
+      </ul>
+
+    </div>
+    <div class="left">
+      <img src="img/GB_1st.jpg" alt="ME">
+
+    </div>
+    <div class="right">
       <h1>WHO</h1>
-        <h3>I am Garret. My pronouns are he/his.
+        <h3>
+          I am Garret. My pronouns are he/his.
         My goals for this course are building a
         good foundation of web knowledge for future
         projects. I enjoy a lot of digital mediums
         such as photography, cinematography, coding
-        and more.</h3>
+        and more.
+      </h3>
+      <h2>
+        <a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a>
+      </h2>
 
-        <h2>Contents</h2>
-        <ul>
-          <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
-          <li><a href="index.html">Assignment 2 (Current Page)</a></li>
-          <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
-          <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
-          <li><a href="page1.html">Test page</a></li>
-        </ul>
+      <h2>
+        <a href="https://www.google.com">Test Link</a>
+      </h2>
 
-        <hr>
+        <br>
 
-        <h2><a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a></h2>
+      <p>
+        This is a test paragraph that I'm using to test certain code for the website.
+      </p>
 
-        <h2><a href="https://www.google.com">Test Link</a></h2>
-
-          <br>
-
-        <img src="img/GB_1st.jpg" alt="ME">
-
-        <p>This is a test paragraph that I'm using to test certain code for the website.</p>
-
-    </body>
+    </div>
+    </div>
+  </body>
 </html>
