--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Assignments</title>
   </head>
   <body>
-
+    <h2>Contents</h2>
+    <ul>
+      <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
+      <li><a href="..assignments/assignment2.html">Assignment 2 (Early Index Page)</a></li>
+      <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
+      <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
+      <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
+    </ul>
   </body>
 </html>
