Added a lot, changed the nav bar, updated stuff

--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="../css/test.css">
     <title>Assignments</title>
   </head>
   <body>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page2.html" class="activemenu">Assignments</a></li>
+        <li><a href="page3.html">Projects</a></li>
+        <li><a href="page4.html">About</a></li>
+      </ul>
+
+    </div>
     <h2>Contents</h2>
     <ul>
       <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
