--- a/page3.html
+++ b/page3.html
@@ -2,9 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/test.css">
     <title></title>
   </head>
   <body>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page2.html">Assignments</a></li>
+        <li><a href="page3.html" class="activemenu">Projects</a></li>
+        <li><a href="page4.html">About</a></li>
+      </ul>
 
+    </div>
   </body>
 </html>
