--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/master.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/test.css">
     <title>Test 1</title>
   </head>
   <body>
-    <div class="box">
-
     <div class="menu">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="activemenu">Home</a></li>
         <li><a href="page2.html">Assignments</a></li>
         <li><a href="page3.html">Projects</a></li>
         <li><a href="page4.html">About</a></li>
@@ -45,7 +43,6 @@
         This is a test paragraph that I'm using to test certain code for the website.
       </p>
 
-    </div>
     </div>
   </body>
 </html>
