--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a href="page3.html">Projects</a></li>
         <li><a href="page4.html">About</a></li>
       </ul>
-
     </div>
+    <div class="box">
     <div class="left">
       <img src="img/GB_1st.jpg" alt="ME">
 
@@ -43,6 +43,7 @@
         This is a test paragraph that I'm using to test certain code for the website.
       </p>
 
+    </div>
     </div>
   </body>
 </html>
