--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="menu">
-      <ul>
+      <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="page2.html">Assignments</a></li>
         <li><a href="page3.html" class="activemenu">Projects</a></li>
