The PC website version is ready. Updated Everything.

--- a/assignments/assignment2.html
+++ b/assignments/assignment2.html
@@ -32,7 +32,7 @@
 
           <br>
 
-        <img src="img/GB_1st.jpg" alt="ME">
+        <img src="../img/GB_1st.jpg" alt="ME">
 
         <p>This is a test paragraph that I'm using to test certain code for the website.</p>
 
