--- a/index.html
+++ b/index.html
@@ -2,48 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/test.css">
-    <title>Test 1</title>
+    <link rel="stylesheet" href="../css/master.css">
+    <title>Home</title>
   </head>
   <body>
     <div class="menu">
       <ul class="nav">
         <li><a href="index.html" class="activemenu">Home</a></li>
-        <li><a href="page2.html">Assignments</a></li>
+        <li><a href="page2.html">About</a></li>
         <li><a href="page3.html">Projects</a></li>
-        <li><a href="page4.html">About</a></li>
+        <li><a href="page5.html">Misc.</a></li>
+        <li><a href="page4.html">Contact</a></li>
       </ul>
     </div>
     <div class="box">
-    <div class="left">
-      <img src="img/GB_1st.jpg" alt="ME">
-
-    </div>
-    <div class="right">
-      <h1>WHO</h1>
-        <h3>
-          I am Garret. My pronouns are he/his.
-        My goals for this course are building a
-        good foundation of web knowledge for future
-        projects. I enjoy a lot of digital mediums
-        such as photography, cinematography, coding
-        and more.
-      </h3>
-      <h2>
-        <a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a>
-      </h2>
-
-      <h2>
-        <a href="https://www.google.com">Test Link</a>
-      </h2>
-
+      <div class="middle">
+        <h1>Hello</h1>
+        <h3>My name is Garret. I am a digitally based artist in Colorado currently studying at <a href="https://www.colorado.edu/">CU Boulder</a></h3>
         <br>
-
-      <p>
-        This is a test paragraph that I'm using to test certain code for the website.
-      </p>
-
-    </div>
+        <h3>I just recently started web design but you can go <a href="page3.html">here</a> to follow my journey!
+        <h3>You can click <a href="page5.html">here</a> to look at my recent stuff, I just recently started trying to catalogue everything I'm working on!</h3>
+        <h3>If you still haven't gotten your fill of me the <a href="page2.html">about</a> page will give you everything you're looking for,
+        <h3>To get in touch with me feel free to check out my <a href="page4.html">contact page</a>.</h3>
+        <hr>
+      </div>
     </div>
   </body>
 </html>
