--- a/page4.html
+++ b/page4.html
@@ -2,17 +2,29 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <link rel="stylesheet" href="../css/test.css">
-    <title>About</title>
+      <link rel="stylesheet" href="../css/master.css">
+    <title>Contact</title>
   </head>
   <body>
     <div class="menu">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Assignments</a></li>
+        <li><a href="page2.html">About</a></li>
         <li><a href="page3.html">Projects</a></li>
-        <li><a href="page4.html" class="activemenu">About</a></li>
+        <li><a href="page5.html">Misc.</a></li>
+        <li><a href="page4.html" class="activemenu">Contact</a></li>
       </ul>
+    </div>
+    <div class="box">
+      <div class="middle">
+        <h1>Contact</h1>
+        <h3 style=text-align:center>&#9888; DISCLAIMER: I am very bad at checking email. &#9888;</h3>
+        <h3>For those who would like to get in touch with me or just want my contact you're in luck!
+          You can have this special email that I will check asap!(Hopefully):</h3>
+        <h3 style=text-align:center>garret.bedford.1224@gmail.com</h3>
+        <h3>If email isn't quite your cup of tea, feel free to reach out on <a href="https://twitter.com/GarretGames1224">Twitter</a> or <a href="https://www.instagram.com/12_.g.a.r.r.e.t._24/">Instagram</a>
+        where I'll probably respond much quicker.</h3>
+      </div>
     </div>
   </body>
 </html>
