--- a/page2.html
+++ b/page2.html
@@ -3,24 +3,51 @@
   <head>
     <meta charset="utf-8">
       <link rel="stylesheet" href="../css/master.css">
-    <title>Assignments</title>
+    <title>About</title>
   </head>
   <body>
     <div class="menu">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html" class="activemenu">Assignments</a></li>
+        <li><a href="page2.html" class="activemenu">About</a></li>
         <li><a href="page3.html">Projects</a></li>
-        <li><a href="page4.html">About</a></li>
+        <li><a href="page5.html">Misc.</a></li>
+        <li><a href="page4.html">Contact</a></li>
       </ul>
     </div>
-    <h2>Contents</h2>
-    <ol class="list">
-      <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
-      <li><a href="../assignments/assignment2.html">Assignment 2 (Early Index Page)</a></li>
-      <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
-      <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
-      <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
-    </ul>
+    <div class="box">
+    <div class="left">
+      <img src="img/GB_1st.jpg" alt="ME">
+    </div>
+    <div class="right">
+      <h1>WHO</h1>
+        <h3>
+          I am Garret. My pronouns are he/his. I mainly do video editing and camera work,
+          but I enjoy learning and making stuff in a wide variety of digital mediums.
+          I've used almost every available software in the adobe suite,
+          I have learned Python, Java, C#, C++, and probably some others as well in a more rudimentary way.
+      </h3>
+      <h3>
+        I've been making digital stuff since I was first able to use a computer.
+        Messing around in free video editing software and game engines.
+        Unfortunately I no longer have a lot of the stuff that I made a while ago,
+        but I hope that this site can hold my current and future work!
+      </h3>
+      <h3>
+        During my free time I like to consume creative media to gather ideas for future projects.
+        YouTube, Twitter, TikTok, everything has a little something that you could take away from it.
+        I really like all types of stuff though, so if you have anything that fits that <a href="page4.html">let me know</a>!
+        I would be more than happy to have more interesting stuff to look at.
+      </h3>
+      <h3>
+        Oh I also really like animals! I've had animals my whole life and they are just the best!
+        <p><em>(I just felt that needed to be said)</em></p>
+      </h3>
+      <hr>
+      <h2 style="text-align:center">
+        <a href="https://youtu.be/iU6ZGXIDmIk">IMPORTANT LINK</a>
+      </h2>
+    </div>
+    </div>
   </body>
 </html>
