--- a/page3.html
+++ b/page3.html
@@ -2,18 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/test.css">
-    <title></title>
+    <link rel="stylesheet" href="../css/master.css">
+    <title>Projects</title>
   </head>
   <body>
     <div class="menu">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="page2.html">Assignments</a></li>
+        <li><a href="page2.html">About</a></li>
         <li><a href="page3.html" class="activemenu">Projects</a></li>
-        <li><a href="page4.html">About</a></li>
+        <li><a href="page5.html">Misc.</a></li>
+        <li><a href="page4.html">Contact</a></li>
       </ul>
-
+    </div>
+    <div class="box">
+      <div class="middle">
+        <h3 style="text-align:center">Contents</h3>
+          <ol class="list">
+            <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
+            <li><a href="../assignments/assignment2.html">Assignment 2 (Early Index Page)</a></li>
+            <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
+            <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
+            <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
+            <li><a href="page5.html">Assignment 6 (Portfolio Website)</a></li>
+          </ul>
+      </div>
     </div>
   </body>
 </html>
