--- a/page4.html
+++ b/page4.html
@@ -21,7 +21,7 @@
         <h3 style=text-align:center>&#9888; DISCLAIMER: I am very bad at checking email. &#9888;</h3>
         <h3>For those who would like to get in touch with me or just want my contact you're in luck!
           You can have this special email that I will check asap!(Hopefully):</h3>
-        <h3 style=text-align:center>garret.bedford.1224@gmail.com</h3>
+        <h3 style=text-align:center;word-break:break-all>garret.bedford.1224@gmail.com</h3>
         <h3>If email isn't quite your cup of tea, feel free to reach out on <a href="https://twitter.com/GarretGames1224">Twitter</a> or <a href="https://www.instagram.com/12_.g.a.r.r.e.t._24/">Instagram</a>
         where I'll probably respond much quicker.</h3>
       </div>
