Some lecture stuff

--- a/page3.html
+++ b/page3.html
@@ -19,6 +19,7 @@
       <div class="middle">
         <h3 style="text-align:center">Contents</h3>
           <ol class="list">
+            <li><a href="../assignments/test.html">Examples and tests</a></li>
             <li><a href="../assignments/assignment1.html">Assignment 1 (Hello World)</a></li>
             <li><a href="../assignments/assignment2.html">Assignment 2 (Early Index Page)</a></li>
             <li><a href="../assignments/assignment3.html">Assignment 3 (Wikipedia Page)</a></li>
