Tested out some javascript, new .css .js .html files

--- a/assignments/test.html
+++ b/assignments/test.html
@@ -6,6 +6,6 @@
     <title>Week 10 Demo</title>
   </head>
   <body>
-    <p class="grow">This is text that will slide in.</p>
+    <p>This is test text.</p>
   </body>
 </html>
