--- a/page3.html
+++ b/page3.html
@@ -26,6 +26,7 @@
             <li><a href="../assignments/assignment4.html">Assignment 4 (HTML Challenges)</a></li>
             <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
             <li><a href="page5.html">Assignment 6 (Portfolio Website)</a></li>
+            <li><a href="../assignments/assignment11.html">Test (Javascript test)</a></li>
           </ul>
       </div>
     </div>
