Changed the css on assignment11, added link to home

--- a/assignments/assignment11.html
+++ b/assignments/assignment11.html
@@ -2,11 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/interactive.css">
+    <link rel="stylesheet" href="../css/master.css">
     <script src="../js/index.js"></script>
     <title>Test</title>
   </head>
   <body>
+    <a href="../index.html">Home</a>
     <h1>This is place holder</h1>
 
     <button id='button-1'>Click Me!</button>
