Updated files, structure is created

--- a/assignments/assignment12.html
+++ b/assignments/assignment12.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/week12-demo.css">
   </head>
   <body>
+    <a href="../index.html">Home</a>
     <div class="app">
   <header>Random Quote Generator</header>
   <section class="quotes">
