--- a/page3.html
+++ b/page3.html
@@ -27,6 +27,7 @@
             <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
             <li><a href="page5.html">Assignment 6 (Portfolio Website)</a></li>
             <li><a href="../assignments/assignment11.html">Test (Javascript test)</a></li>
+            <li><a href="../assignments/assignment12.html">Quote Generator Example</a></li>
           </ul>
       </div>
     </div>
