Working Cat/Dog API's and new files

--- a/assignments/assignment12.html
+++ b/assignments/assignment12.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Week 12 Demo -- Quote Machine</title>
     <link rel="stylesheet" href="../css/week12-demo.css">
+    <script defer src="../js/week12-demo.js"></script>
   </head>
   <body>
     <a href="../index.html">Home</a>
@@ -13,8 +14,11 @@
     <div class="quote-text" id="js-quote-text"></div>
   </section>
   <section class="controls">
-    <button type="button" id="js-new-quote" class="new-quote button">
-      Generate a new quote
+    <button type="button" id="js-cat-quote" class="new-quote button">
+      Generate a new cat quote
+    </button>
+    <button type="button" id="js-dog-quote" class="new-quote button">
+      Generate a new dog quote
     </button>
   </section>
 </div>
