Added assignment13.html & .js, updated project page

--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,8 @@
             <li><a href="index.html">Assignment 5 (Responsive Page/Home)</a></li>
             <li><a href="page5.html">Assignment 6 (Portfolio Website)</a></li>
             <li><a href="../assignments/assignment11.html">Test (Javascript test)</a></li>
-            <li><a href="../assignments/assignment12.html">Quote Generator Example</a></li>
+            <li><a href="../assignments/assignment12.html">Quote Generator</a></li>
+            <li><a href="../assignments/assignment13.html">\MadLib Generator</a></li>
           </ul>
       </div>
     </div>
