Finished assignment13.js

--- a/page3.html
+++ b/page3.html
@@ -28,7 +28,7 @@
             <li><a href="page5.html">Assignment 6 (Portfolio Website)</a></li>
             <li><a href="../assignments/assignment11.html">Test (Javascript test)</a></li>
             <li><a href="../assignments/assignment12.html">Quote Generator</a></li>
-            <li><a href="../assignments/assignment13.html">\MadLib Generator</a></li>
+            <li><a href="../assignments/assignment13.html">MadLib Generator</a></li>
           </ul>
       </div>
     </div>
