--- a/assignments/assignment13.html
+++ b/assignments/assignment13.html
@@ -5,40 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <script defer src="../js/assignment13.js"></script>
+    <link rel="stylesheet" href="../css/master.css">
 
-    <title>Silly story generator</title>
+    <title>Story generator</title>
 
-    <style>
-
-    body {
-      font-family: helvetica, sans-serif;
-      width: 350px;
-    }
-
-    label {
-      font-weight: bold;
-    }
-
-    div {
-      padding-bottom: 20px;
-    }
-
-    input[type="text"] {
-      padding: 5px;
-      width: 150px;
-    }
-
-    p {
-      background: #FFC125;
-      color: #5E2612;
-      padding: 10px;
-      visibility: hidden;
-    }
-
-    </style>
   </head>
 
   <body>
+    <a href="../index.html">Home</a>
     <div>
       <label for="customname">Enter custom name:</label>
       <input id="customname" type="text" placeholder="">
@@ -52,8 +26,6 @@
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
-
-
 
   </body>
 </html>
