--- a/assignments/assignment13.html
+++ b/assignments/assignment13.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <script defer src="../js/assignment13.js"></script>
-    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" href="../css/week12-demo.css">
 
     <title>Story generator</title>
 
