--- a/page3.html
+++ b/page3.html
@@ -29,6 +29,7 @@
             <li><a href="../assignments/assignment11.html">Test (Javascript test)</a></li>
             <li><a href="../assignments/assignment12.html">Quote Generator</a></li>
             <li><a href="../assignments/assignment13.html">MadLib Generator</a></li>
+            <li><a href="../assignments/assignment14.html">JSON Basics</a></li>
           </ul>
       </div>
     </div>
