Updated gallery.css and page5.html

--- a/page5.html
+++ b/page5.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
         <link rel="stylesheet" href="../css/gallery.css">
         <link rel="stylesheet" href="../css/jquery.flipster.min.css">
+        <script defer src="../js/week12-demo.js"></script>
     <title>Misc.</title>
   </head>
   <body>
@@ -57,5 +58,15 @@
       });
     </script>
 
+    <div class="app">
+      <header>Random Cat/Dog Quote Generator</header>
+      <section class="quotes">
+        <div class="quote-text" id="js-quote-text"></div>
+      </section>
+      <section class="controls">
+        <button type="button" id="js-cat-quote" class="new-quote button">Generate a new cat quote</button>
+        <button type="button" id="js-dog-quote" class="new-quote button">Generate a new dog quote</button>
+      </section>
+    </div>
   </body>
 </html>
